--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@
 .idea/**/gradle.xml
 .idea/**/libraries
 
+# Vscode genereate
+intellij/bin
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
