:wrench: Configuration for offline publish

--- a/Visio/Visio.csproj
+++ b/Visio/Visio.csproj
@@ -26,13 +26,37 @@
     <NoStandardLibraries>false</NoStandardLibraries>
     <RootNamespace>GraffitiForVisio</RootNamespace>
     <AssemblyName>Visio</AssemblyName>
-    <LoadBehavior>3</LoadBehavior>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <DefineConstants>VSTO40</DefineConstants>
+    <IsWebBootstrapper>False</IsWebBootstrapper>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <BootstrapperComponentsLocation>HomeSite</BootstrapperComponentsLocation>
+    <BootstrapperComponentsLocation>Relative</BootstrapperComponentsLocation>
+    <PublishUrl>publish\</PublishUrl>
+    <InstallUrl />
+    <TargetCulture>en</TargetCulture>
+    <ApplicationVersion>1.0.0.2</ApplicationVersion>
+    <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateInterval>0</UpdateInterval>
+    <UpdateIntervalUnits>days</UpdateIntervalUnits>
+    <ProductName>Visio</ProductName>
+    <PublisherName />
+    <SupportUrl />
+    <FriendlyName>Graffiti for Visio</FriendlyName>
+    <OfficeApplicationDescription>Graffiti support for Visio</OfficeApplicationDescription>
+    <LoadBehavior>3</LoadBehavior>
   </PropertyGroup>
   <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.VSTORuntime.4.0">
       <Visible>False</Visible>
       <ProductName>Microsoft Visual Studio 2010 Tools for Office Runtime %28x86 and x64%29</ProductName>
@@ -270,8 +294,8 @@
     <VisualStudio>
       <FlavorProperties GUID="{BAA0C2D2-18E2-41B9-852F-F413020CAA33}">
         <ProjectProperties HostName="Visio" HostPackage="{29A7B9D7-A7F1-4328-8EF0-6B2D1A56B2C1}" OfficeVersion="15.0" VstxVersion="4.0" ApplicationType="Visio" Language="cs" TemplatesPath="" DebugInfoExeName="#Software\Microsoft\Office\16.0\Visio\InstallRoot\Path#visio.exe" AddItemTemplatesGuid="{51063C3A-E220-4D12-8922-BDA915ACD783}" />
-        <Host Name="Visio" GeneratedCodeNamespace="Visio" IconIndex="0">
-          <HostItem Name="ThisAddIn" Code="GraffitiAddIn.cs" CanonicalName="AddIn" CanActivate="false" IconIndex="1" Blueprint="GraffitiAddIn.Designer.xml" GeneratedCode="GraffitiAddIn.Designer.cs" />
+        <Host Name="Visio" GeneratedCodeNamespace="Visio" PublishedHash="69C324AB27932AA2FBF2B7EA72250886FF164DE6" IconIndex="0">
+          <HostItem Name="ThisAddIn" Code="GraffitiAddIn.cs" CanonicalName="AddIn" PublishedHash="7AA046F22053D20874016EB20BAB25A91E74E5D2" CanActivate="false" IconIndex="1" Blueprint="GraffitiAddIn.Designer.xml" GeneratedCode="GraffitiAddIn.Designer.cs" />
         </Host>
       </FlavorProperties>
     </VisualStudio>
