:sparkles: Support for edge text in visio & vscode

--- a/backends/vscode/package.json
+++ b/backends/vscode/package.json
@@ -39,6 +39,14 @@
                 "title": "Graffiti: Add to graph"
             },
             {
+                "command": "graffiti.AddToGraphWithEdgeInfo",
+                "title": "Graffiti: Add to graph with edge comment"
+            },
+            {
+                "command": "graffiti.ChangeEdgeDirection",
+                "title": "Graffiti: Change the edge's direction"
+            },
+            {
                 "command": "graffiti.ConnectToServer",
                 "title": "Graffiti: Connect to server for pull events"
             }
