:recycle: Add support for new server in intellij

--- a/backends/intellij/src/main/resources/META-INF/plugin.xml
+++ b/backends/intellij/src/main/resources/META-INF/plugin.xml
@@ -32,7 +32,7 @@
         </action>
 
         <action id="com.yoavst.graffiti.intellij.EnableGraffitiSyncAction"
-                class="com.yoavst.graffiti.intellij.EnableGraffitiSyncAction" text="Enable graffiti sync">
+                class="com.yoavst.graffiti.intellij.EnableGraffitiSyncAction" text="Enable graffiti support in project">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
 
