--- a/backends/intellij/src/main/resources/META-INF/plugin.xml
+++ b/backends/intellij/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,8 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
+        <notificationGroup id="Graffiti Notifications"
+                           displayType="BALLOON"/>
     </extensions>
 
     <actions>
