--- a/backends/vscode/package.json
+++ b/backends/vscode/package.json
@@ -19,7 +19,7 @@
         "url": "https://github.com/yoavst/Graffiti/issues"
     },
     "engines": {
-        "vscode": "^1.30.0"
+        "vscode": "^1.76.0"
     },
     "categories": [
         "Programming Languages",
@@ -116,8 +116,8 @@
     "devDependencies": {
         "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.25",
+        "@types/vscode": "^1.76.0",
         "mocha": "^2.3.3",
-        "typescript": "^3.1.4",
-        "@types/vscode": "^1.76.0"
+        "typescript": "^3.1.4"
     }
 }
