--- a/backends/opengrok_sourcegraph/package.json
+++ b/backends/opengrok_sourcegraph/package.json
@@ -18,5 +18,9 @@
         "typescript": "^5.4.3",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "@lezer/cpp": "^1.1.2",
+        "@lezer/java": "^1.1.1"
     }
 }
