--- a/backends/vscode/package.json
+++ b/backends/vscode/package.json
@@ -118,6 +118,7 @@
         "@types/node": "^8.10.25",
         "@types/vscode": "^1.64.0",
         "mocha": "^2.3.3",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "@vscode/vsce": "^2.26.0"
     }
 }
