Install python and pybunch only for JEB

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         target:
-          - { name: jeb, type: pack }
+          - { name: jeb, type: pybunch }
           - { name: intellij, type: java }
           - { name: clion, type: java }
           - { name: ida, type: pack }
@@ -55,9 +55,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+        if: matrix.target.type == 'pybunch'
       
       - name: Install pybunch
         run: python -m pip install pybunch
+        if: matrix.target.type == 'pybunch'
 
       - name: Build ${{ matrix.target.name }}
         run: make ${{ matrix.target.name }}
