--- a/backends/vscode/package.json
+++ b/backends/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "graffiti",
   "displayName": "Graffiti",
   "description": "Add nodes to call graph directly from VSCode",
-  "version": "1.10.0",
+  "version": "1.11.0",
   "publisher": "yoavst",
   "icon": "icon.png",
   "author": {
@@ -117,8 +117,8 @@
     "@types/mocha": "^2.2.42",
     "@types/node": "^8.10.25",
     "@types/vscode": "^1.64.0",
+    "@vscode/vsce": "^2.26.0",
     "mocha": "^2.3.3",
-    "typescript": "^5.2.2",
-    "@vscode/vsce": "^2.26.0"
+    "typescript": "^5.2.2"
   }
 }
