--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,23 @@ permissions:
   id-token: write
 
 jobs:
+  check-server-python-compat:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: Install Vermin
+        run: python -m pip install vermin
+      - name: Check for python version violation
+        run: python -m vermin --config-file server/vermin.ini --quiet --violations server/
+
   backend:
     runs-on: ubuntu-latest
+    needs: check-server-python-compat
     strategy:
       matrix:
         target:
@@ -49,13 +64,13 @@ jobs:
 
       - name: Configure
         run: make init
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
         if: matrix.target.type == 'pybunch'
-      
+
       - name: Install pybunch
         run: python -m pip install pybunch
         if: matrix.target.type == 'pybunch'
