--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Vermin
         run: python -m pip install vermin
       - name: Check for python version violation
-        run: python -m vermin --config-file server/vermin.ini --quiet --violations server/
+        run: vermin --config-file server/vermin.ini --quiet --violations server/
 
   backend:
     runs-on: ubuntu-latest
