--- a/backends/websites/package.json
+++ b/backends/websites/package.json
@@ -14,13 +14,19 @@
         "@types/chrome": "^0.0.263",
         "copy-webpack-plugin": "^12.0.2",
         "prettier": "3.2.5",
+        "tree-sitter-cli": "^0.22.6",
+        "tree-sitter-cpp": "^0.22.2",
+        "tree-sitter-java": "^0.21.0",
+        "tree-sitter-kotlin": "^0.3.6",
         "ts-loader": "^9.5.1",
         "typescript": "^5.4.3",
-        "webpack": "^5.91.0",
+        "webpack": "^5.92.0",
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "@lezer/cpp": "^1.1.2",
-        "@lezer/java": "^1.1.1"
+        "@lezer/java": "^1.1.1",
+        "p-lazy": "^4.0.0",
+        "web-tree-sitter": "^0.22.6"
     }
 }
