--- a/backends/intellij/plugin/src/main/resources/META-INF/plugin.xml
+++ b/backends/intellij/plugin/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,7 @@
     <depends optional="true">com.intellij.modules.clion</depends>
     <depends optional="true">com.jetbrains.php</depends>
     <depends optional="true">org.jetbrains.plugins.go</depends>
+    <depends optional="true">com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
