--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           - { name: vscode, type: typescript }
           - { name: websites, type: typescript }
           - { name: jadx, type: pack }
-          - { name: server, type: pybunch }
+          - { name: server, type: python }
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -74,7 +74,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-        if: matrix.target.type == 'pybunch'
+        if: matrix.target.type == 'pybunch' || matrix.target.type == 'python'
 
       - name: Install pybunch
         run: python -m pip install pybunch
