--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+**/.intellijPlatform/*
+
 .gradle
 **/build/
 !src/**/build/
